# arua

./: README.md  __init__.py  segment-01.ily  setup.cfg  setup.py
a_rua_dos_cataventos/: score_structure.py
a_rua_dos_cataventos.egg-info/: PKG-INFO  SOURCES.txt
a_rua_dos_cataventos/components/analysis/: Untitled2.ipynb  iracema_analysis.py  librosa_analysis.py
a_rua_dos_cataventos/components/analysis/.ipynb_checkpoints/: Untitled2-checkpoint.ipynb  iracema_analysis-checkpoint.ipynb
a_rua_dos_cataventos/components/analysis/backup_analysis/: Untitled1.ipynb  Untitled2.ipynb  decompose_spectra.ipynb  fft_analysis.ipynb  iracema_analysis.ipynb  iracema_analysis_old.py  plot_display.py  (+3 more)
a_rua_dos_cataventos/components/pitch/: pitches_01.py
a_rua_dos_cataventos/components/rhythm/: rmakers_01.py
a_rua_dos_cataventos/components/timespans/: timespans_01.py
a_rua_dos_cataventos/materials/: materials_01.py
a_rua_dos_cataventos/score/: score.ly  score.midi  score.py  segment_01.ly  stylesheet.ily
a_rua_dos_cataventos/segments/: segment_01.py
a_rua_dos_cataventos/segments/illustrations/: illustration_segment_00.ly  illustration_stylesheet.ily  segment_01-tmp-1669057  segment_01-tmp-4855184  segment_01.ly  segment_01.midi
editors/: a_rua_dos_cataventos.sublime-build  a_rua_dos_cataventos.sublime-project  a_rua_dos_cataventos.sublime-workspace
editors/arua.xcodeproj/: project.pbxproj
editors/arua.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lh/: pyvenv.cfg
pip-wheel-metadata/a_rua_dos_cataventos.dist-info/: METADATA
tests/: tests.py  work.py
(+3 files in other folders)
