[metadata]
# replace with your username:
name = a_rua_dos_cataventos
version = 0.0.1
author = Davi Raubach
author_email = raubachdavi@gmail.com
description = for ensemble
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaviRaubach/a_rua_dos_cataventos
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6